# simpleProxy

./: .env.example  .gitignore  CMakeLists.txt  README.md  build.sh  docker-compose.yml  proxytest.sh
include/: auth.h  http.h  proxy.h  util.h
include/collections/: hashset.h
include/core/: common.h  config.h  logger.h  util.h
include/core/collections/: hashmap.h  hashset.h
include/core/db/: db.h  migration.h  util.h
include/db/: db.h  migration.h  user.h
include/main/: auth.h  client.h  client_registry.h  common.h  connection.h  epoll.h  epoll_util.h  http.h  https.h  loop_handlers.h  proxy.h  timeout.h  util.h
include/proxy_config/: commands.h  setup.h
packaging/: conffiles  postinst  postrm  prerm  simpleproxy.conf  simpleproxy.service
src/: http.c  https.c  main.c  proxy.c  util.c
src/collections/: hashset.c
src/core/: auth.c  config.c  logger.c  proxy.c  util.c
src/core/collections/: hashmap.c  hashset.c
src/core/db/: db.c  migration.c  user.c  util.c
src/main/: auth.c  client.c  client_registry.c  connection.c  epoll.c  epoll_util.c  http.c  https.c  loop_handlers.c  main.c  proxy.c  timeout.c  util.c
src/proxy_config/: commands.c  proxy_config.c  setup.c
